--- a/tea-stu login.html
+++ b/tea-stu login.html
@@ -15,7 +15,7 @@
         <div class="wel">Welcome</div>
         <div class="conn">Log in to the account</div>
         <div class="email">E-mail</div>
-        <input class="in" type="text" placeholder=" Email">
+        <input class="in" type="text" placeholder=" Email">  <!--SEVEEERELY IMPORTANT: the email MUST be valid (he had his email in the queue of 'registred students' from the administrator) so the user can login, else he will be sent to the 'not valid' page-->
         <div class="pass">Password</div>
         <div class="Incorrect">Incorrect password</div>
         <div class="forgot">Forgot password?</div>
